--- a/style.css
+++ b/style.css
@@ -5,11 +5,9 @@ body{
 header{
     width: 87%;
     height: 127px;
-    background-color: white;
     justify-content: space-between;
     padding-left: 120px;
     padding-right: 120px;
-    border: 1px solid black;
     text-transform:Uppercase;
 }
 
@@ -87,7 +85,6 @@ header{
     Gap:8px;
 }
 
-
 .vhod{
     display: flex;
     align-items: center;
@@ -98,8 +95,12 @@ header{
 .wallet{
     display: flex;
     flex-direction: row;
-    Width: 73px;
+    Width: 80px;
     Height: 24px;
+}
+
+.wallet img{
+    margin-right: 8px;
 }
 
 .count{
@@ -109,15 +110,175 @@ header{
     font-size: 14px;
 }
 
+main{
+    width: 87%;
+    text-transform:Uppercase;
+}
+
 .section{
+    display: flex;
+    position: relative;
     Width:1831px;
-    Height:244px;
-    Top:142px;
-    Left:-125px;
+    Height:204px;
+    Top:-142px;
+    Left:10px;
     font-family: 'Inter';
     font-weight: 900;
-    font-size: 202px;
+    font-size: 225px;
     text-align: center;
     text-transform: uppercase;
-    color: rgba(235, 235, 235, 1); 
+    color: rgba(156, 156, 156, 0.3);
+
+    z-index: 10;
+}
+
+.clock{
+    position: relative;
+    Width:1016px;
+    top: -500px;
+    Left: 62px;
+    z-index: 0;
+}
+
+.info{
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    Width:410px;
+    Height:532px;
+    Top:-1270px;
+    Left:1315px;
+    Padding:30px;
+    Gap:30px;
+    z-index: 20;
+}
+
+.clock_name{
+    width: 302px;
+    height: 88px;
+    font-weight: 900;
+    font-size: 36px;
+}
+
+span{
+    width: 15px;
+    border: 5px solid black;
+}
+
+.number{
+    width: 175px;
+    height: 58px;
+    margin-top: -25px;
+    margin-bottom: 218px;
+}
+
+.price{
+    width: 134px;
+    font-weight: 400;
+    font-size: 48px;
+    color: rgb(0.0.0.1)
+}
+
+.rubl{
+    position: relative;
+    top: -107px;
+    left: 140px;
+    width: 31px;
+    font-weight: 400;
+    font-size: 48px;
+    color: rgba(220, 216, 216, 1);
+
+}
+
+.stats{
+    display: grid;
+    grid-template-columns: 160px 160px;
+    grid-template-rows: 65px;
+    grid-template-areas: 
+    'box1 box2'
+    'box3 box4';
+    position: relative;
+    top:-180px;
+    gap: 20px;
+}
+
+.material{
+    Width: 160px;
+    Height: 63px;
+}
+
+.point{
+    font-weight: 400;
+    font-size: 16px;
+    color: rgba(171, 171, 171, 1);
+    margin-top: 0px;
+    margin-bottom: -10px;
+}
+
+.opisanie{
+    font-weight: 600;
+    font-size: 16px;
+    color: rgba(0, 0, 0, 1);
+}
+
+.options{
+    Width: 160px;
+    Height: 63px;
+    position: relative;
+    float: right;
+}
+
+.gabarit{
+    Width: 160px;
+    Height: 63px;
+}
+
+.glass{
+    Width: 160px;
+    Height: 63px;
+    position: relative;
+    float: right;
+}
+
+.button_buy{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    top:-170px;
+    width: 145px;
+    height: 25px;
+    border-radius: 9px;
+    border: 2px solid black;
+    padding: 18px 56px;
+    gap: 10px;
+    text-transform: none;
+}
+
+.button_buy img{
+    width: 30px;
+    height: 30px;
+}
+
+.button_buy h1{
+    width: 99px;
+    height: 24px;
+    font-weight: 500;
+    font-size: 20px;
+}
+
+#material{
+    grid-area: box1;
+}
+
+#options{
+    grid-area: box2;
+}
+
+#gabarit{
+    grid-area: box3;
+}
+
+#glass{
+    grid-area: box4;
 }
