--- a/style.css
+++ b/style.css
@@ -1509,5 +1509,271 @@ span{
     line-height: 24px;
     text-transform: none;
     color: rgba(80, 80, 80, 1);
-;
+}
+
+@media (width:673px) {
+
+    body{
+        width: 673px;
+    }
+    header{
+        padding-left: 27px;
+        margin-top: -10px;
+    }
+
+    .navigation{
+        display: none;
+    }
+
+    .account{
+        top: 44px;
+        right: -152.5px;
+    }
+
+    .account img{
+        display: none;
+    }
+
+    .enter{
+        display: none;
+    }
+
+    .wallet img{
+        display: flex;
+    }
+
+    .burger_menu{
+        position: relative;
+        top: 45px;
+        right: 76px;
+        float: right;
+        display: flex;
+        width: 32px;
+        height: 23px;
+        flex-wrap: wrap;
+        align-content: space-between;
+        justify-content: flex-end;
+    }
+
+    .burger_line1{
+        width: 32px;
+        height: 3px;
+        background-color: black;
+    }
+
+    .burger_line2{
+        width: 21px;
+        height: 3px;
+        background-color: black;
+    }
+
+    .section1{
+        font-size: 83px;
+        Top: -39px;
+        Left: -27px;
+        letter-spacing: 2.4px;
+    }
+
+    .clock{
+        width: 605px;
+        top: -348px;
+        Left: 26px;
+    }
+
+    .galary{
+        top: -1042px;
+        left: 57px;
+    }
+
+    .strelka1{
+        top: -954.89px;
+        left: 28px;
+    }
+
+    .strelka2{
+        top: -1126px;
+        left: 615px;
+    }
+
+    .info{
+        Top: -303px;
+        Left: 28px;
+    }
+
+    .clock_name{
+        letter-spacing: -0.1px;
+    }
+
+    span{
+        top: -31px;
+        width: 22px;
+    }
+
+    .number{
+        letter-spacing: 1.4px;
+    }
+
+    .stats{
+        grid-template-columns: 260px 235px;
+        grid-template-rows: 92px 93px;
+        top: -177px;
+        gap: 18px;
+    }
+
+    .material{
+        Width: 222px;
+        Height: 90px;
+    }
+
+    .point1{
+        font-size: 20px;
+        letter-spacing: 0.3px;
+    }
+
+    .opisanie1{
+        font-size: 20px;
+        top: 7.61px;
+        letter-spacing: 0.3px;
+    }
+
+    .point2{   
+        font-size: 21px;
+        top: -4.4px;
+        left: 1.5px;
+    }
+
+    .opisanie2{
+        font-size: 19px;
+        top: 6.8px;
+        left: 2px;
+        letter-spacing: 0.9px;
+    }
+
+    .point3{
+        font-size: 20px;
+        top: -2px;
+        letter-spacing: 0.3px;
+        margin-bottom: -1px;
+    }
+
+    .opisanie3{
+        font-size: 20px;
+        letter-spacing: 0.3px;
+    }
+
+    .point4{
+        font-size: 21px;
+        margin-bottom: -3px;
+        top: -1px;
+        left: 2px;
+    }
+
+    .opisanie4{
+        font-size: 20px;
+        left: 1px;
+    }
+
+    .button_buy{
+        top: -180px;
+        width: 99px;
+    }
+
+    .button_buy img{
+        display: none;
+    }
+
+    .information{
+        width: 610px;
+        top: -529px;
+        left: 55px;
+        gap: 17px;
+    }
+
+    .div1{
+        width: 175px;
+    }
+
+    .div1 h1{
+        top: -19px;
+        font-size: 69px;
+    }
+
+    .div1 p{
+        letter-spacing: 0.08px;
+        top: -54px;
+        left: -3px;
+        color: black;
+    }
+
+    
+    .div2{
+        width: 175px;
+    }
+
+    .div2 h1{
+        top: -19px;
+        left: 6px;
+        font-size: 69px;
+    }
+
+    .div2 p{
+        letter-spacing: 0px;
+        top: -54px;
+        left: 4px;
+    }
+
+    .div3{
+        width: 175px;
+    }
+
+    .div3 img{
+        display: none;
+    }
+
+    .div3 h1{
+        display: block;
+        position: relative;
+        top: -16px;
+        left: 10px;
+        width: 135px;
+        height: 73px;
+        font-weight: 900;
+        font-size: 67px;
+        color: black;
+        letter-spacing: 4px;
+        margin-bottom: -27px;
+    }
+
+    .div3 p{
+        left: 8px;
+    }
+
+
+
+    
+
+    
+
+
+
+
+
+
+
+
+
+
+
+
+    .section2{
+        Top: -356px;
+    }
+
+    .katalog{
+        top: -573px;
+    }
+
+    .filter{
+        top: -823px;
+    }
 }
