--- a/style.css
+++ b/style.css
@@ -1,16 +1,20 @@
 body{
+    position: relative;
+    left: 150px;
     font-family: 'Inter';
     width: 1600px;
-    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 header{
     display: flex;
-    width: 100%;
+    width: 1400px;
     height: 127px;
+    position: relative;
+    left: 21px;
     justify-content: space-between;
-    padding-left: 120px;
-    padding-right: 120px;
     margin-left: 1px;
     margin-top: 2px;
     margin-right: 1px;
@@ -54,8 +58,8 @@ header{
 .navigation{
     display: flex;
     position: relative;
-    top: 45px;
-    left: -25px;
+    top: 46px;
+    left: 42px;
     bottom: 34px;
     Width: 652px;
     Height: 22px;
@@ -77,7 +81,7 @@ header{
     position: relative;
     float: right;
     top: 45px;
-    right: 69px;
+    right: -64px;
     bottom: 60px;
     width: 258px;
     Height: 23px;
@@ -133,7 +137,7 @@ main{
 .section1{
     display: flex;
     position: relative;
-    Width:1831px;
+    Width: 1678px;
     Height:204px;
     Top: -97px;
     Left:-58px;
@@ -1475,10 +1479,10 @@ span{
 .section3{
     display: flex;
     position: absolute;
-    Width: 1683px;
+    Width: 1614px;
     Height: 249px;
-    Top: 2566px;
-    Left: 4px;
+    Top: 2532px;
+    Left: -4px;
     font-family: 'Inter';
     font-weight: 900;
     font-size: 207px;
@@ -1491,13 +1495,12 @@ span{
 
 .text_boxs{
     display: flex;
-    width: 1600px;
+    width: 1400px;
     height: 145px;
     position: relative;
     top: -1795px;
     left: 4.5px;
     padding-left: 120px;
-    padding-right: 130px;
     gap: 38px;
 
 }
